@@ -255,6 +255,10 @@
       \item The \code{as.POSIXlt(<POSIXlt>)} and
       \code{as.POSIXct(<POSIXct>)} default methods now do obey their
       \code{tz} argument, also in this case.
+
+      \item \code{as.POSIXlt(<Date>)} now does apply a \code{tz} (timezone)
+      argument, as does \code{as.POSIXct()}; partly suggested by Roland Fuß on
+      the R-devel mailing list.
     }
   }
 }
